client: add chatOpen, style scrollbar. server: fix

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -50,3 +50,18 @@ $themes: (
     @content;
   }
 }
+
+html *::-webkit-scrollbar {
+  border-radius: 0;
+  width: 8px;
+}
+
+html *::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(236, 236, 239, 0.06);
+}
+
+html *::-webkit-scrollbar-track {
+  border-radius: 0;
+  background-color: rgba(242, 240, 240, 0);
+}
